# blog

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .sops.yaml  404.html  LICENSE  eslint.config.mjs  index.html  mkdocs.yaml  nx.json  objects.inv  package-lock.json  package.json  project.json  pyproject.toml  sitemap.xml  tsconfig.base.json
.devcontainer/: devcontainer.json  npm.sh  pre-commit.sh  sops.sh  uv.sh
.github/workflows/: ci.yaml  publish-docker.yaml  publish-docs.yaml
.verdaccio/: config.yml
CHANGELOG/: index.html
blog/: index.html
blog/2026/03/08/setting-up-a-local-first-ai-developer-environment/: index.html
blog/archive/2026/: index.html
blog/category/devops/: index.html
blog/category/large-language-models/: index.html
blog/category/software-development/: index.html
docs/: CHANGELOG.md
docs/blog/: .authors.yaml
docs/blog/posts/: local-first-llm-setup-guide.md
libs/angular/thijsfranck-ui/: .env.enc  README.md  ng-package.json  project.json  tsconfig.json  tsconfig.lib.json
libs/angular/thijsfranck-ui/.storybook/: main.ts  tsconfig.json
libs/angular/thijsfranck-ui/src/: index.ts
libs/angular/thijsfranck-ui/src/lib/example/: example.scss  example.spec.ts  example.stories.ts  example.ts
libs/angular/ui/: eslint.config.mjs  ng-package.json  package.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json
print_page/: index.html
search/: search_index.json
tools/plugins/: docker-compose.ts  docker.ts  mkdocs.ts  python.ts  sops-decrypt.ts  sops-encrypt.ts
